style: :lipstick: Update Style and Form Style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 2.5em;
+}
+
+main {
+    margin-top: 2.5em;
+    margin-bottom: 2.5em;
 }
 
 footer {
