--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,9 +21,9 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    min-height: 100dvh;
+    display: grid !important;
+    grid-template-rows: auto 1fr auto;
     background: linear-gradient(var(--secondary-black-color) 0%, var(--primary-black-color) 100%) !important;
 }
 
@@ -91,6 +91,7 @@ main form {
 
 #loginForm {
     width: calc(100% - 50%);
+    height: fit-content !important;
 }
 
 footer {
@@ -133,11 +134,25 @@ footer a:hover {
     .description {
         font-size: 1.2em !important;
     }
+
+    #loginForm {
+        width: calc(100% - 20%) !important;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
     main {
         padding-left: 2em !important;
         padding-right: 2em !important;
+    }
+
+    #loginForm {
+        width: calc(100% - 20%) !important;
+    }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+    #loginForm {
+        width: calc(100% - 20%) !important;
     }
 }
