--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,10 @@ main form {
     background: var(--form-color);
 }
 
+main #ppForm {
+    width: calc(100% - 40%) !important;
+}
+
 .description {
     text-align: justify !important;
 }
@@ -116,6 +120,10 @@ footer a:hover {
         padding-right: 1em !important;
     }
 
+    main #ppForm {
+        width: 100% !important;
+    }
+
     .description {
         font-size: 1.2em !important;
     }
@@ -129,6 +137,10 @@ footer a:hover {
     main {
         padding-left: 1.5em !important;
         padding-right: 1.5em !important;
+    }
+
+    main #ppForm {
+        width: calc(100% - 10%) !important;
     }
 
     .description {
@@ -146,12 +158,21 @@ footer a:hover {
         padding-right: 2em !important;
     }
 
+    main #ppForm {
+        width: calc(100% - 10%) !important;
+    }
+
     #loginForm {
         width: calc(100% - 20%) !important;
     }
 }
 
 @media (min-width: 993px) and (max-width: 1200px) {
+
+    main #ppForm {
+        width: 100% !important;
+    }
+
     #loginForm {
         width: calc(100% - 20%) !important;
     }
