--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,14 +67,11 @@ main {
     transition: all .5s ease;
 }
 
-main form {
+main #spp-form {
     box-shadow: 20px 50px 70px rgba(0, 0, 0, .5);
     border-radius: 15px;
     color: var(--font-black-color);
     background: var(--form-color);
-}
-
-main #ppForm {
     width: calc(100% - 25%) !important;
 }
 
@@ -91,19 +88,6 @@ main #ppForm {
 .btn-primary:hover {
     border: none !important;
     background: var(--secondary-black-color) !important;
-}
-
-#loginForm {
-    width: calc(100% - 50%);
-    height: fit-content !important;
-}
-
-.message {
-    display: none;
-}
-
-.message.active {
-    display: block;
 }
 
 footer {
@@ -128,16 +112,12 @@ footer a:hover {
         padding-right: 1em !important;
     }
 
-    main #ppForm {
+    main #spp-form {
         width: 100% !important;
     }
 
     .description {
         font-size: 1.2em !important;
-    }
-
-    #loginForm {
-        width: calc(100% - 20%) !important;
     }
 }
 
@@ -147,16 +127,12 @@ footer a:hover {
         padding-right: 1.5em !important;
     }
 
-    main #ppForm {
+    main #spp-form {
         width: calc(100% - 10%) !important;
     }
 
     .description {
         font-size: 1.2em !important;
-    }
-
-    #loginForm {
-        width: calc(100% - 20%) !important;
     }
 }
 
@@ -166,22 +142,14 @@ footer a:hover {
         padding-right: 2em !important;
     }
 
-    main #ppForm {
+    main #spp-form {
         width: calc(100% - 10%) !important;
-    }
-
-    #loginForm {
-        width: calc(100% - 20%) !important;
     }
 }
 
 @media (min-width: 993px) and (max-width: 1200px) {
 
-    main #ppForm {
+    main #spp-form{
         width: 100% !important;
-    }
-
-    #loginForm {
-        width: calc(100% - 20%) !important;
     }
 }
