--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -12,6 +12,7 @@
     --form-black-color: #0f2942;
     --background-light: #daecfa;
     --background-dark: #0f2942;
+    --background-dark-opacity: #4747478f;
     --primary-button: #268dd1;
     --primary-button-hover: #176fb2;
 }
@@ -21,7 +22,18 @@
 }
 
 ::-webkit-scrollbar {
-    width: 0 !important;
+    height: 10px;
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--background-light);
+    border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 25px;
+    background: var(--background-dark-opacity);
 }
 
 html,
@@ -31,7 +43,7 @@ body {
 
 body {
     display: grid;
-    grid-template-columns: 260px 1fr;
+    grid-template-columns: 250px 80%;
     grid-template-rows: 100% 1fr;
     background: var(--form-color);
     color: var(--font-black-color);
