--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -43,7 +43,7 @@ body {
 
 body {
     display: grid;
-    grid-template-columns: 250px 80%;
+    grid-template-columns: 350px 80%;
     grid-template-rows: 100% 1fr;
     background: var(--form-color);
     color: var(--font-black-color);
@@ -51,6 +51,10 @@ body {
 
 header {
     color: var(--font-color);
+}
+
+nav {
+    width: 300px;
 }
 
 .bg-dark {
