--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,6 +20,10 @@
     width: 0 !important;
 }
 
+body.swal2-height-auto {
+    height: inherit !important;
+}
+
 body {
     min-height: 100dvh;
     display: grid !important;
@@ -94,7 +98,7 @@ main #spp-form {
     color: var(--font-color) !important;
 }
 
-#forgot-link{
+#forgot-link {
     color: var(--form-black-color) !important;
 }
 
@@ -161,7 +165,7 @@ footer a:hover {
 
 @media (min-width: 993px) and (max-width: 1200px) {
 
-    main #spp-form{
+    main #spp-form {
         width: 100% !important;
     }
 }
