--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -122,6 +122,11 @@ footer a:hover {
     color: var(--font-hover-color) !important;
 }
 
+#logo-img {
+    width: calc(100% - 75%) !important;
+    transition: all .5s ease;
+}
+
 @media (max-width: 576px) {
     main {
         padding-left: 1em !important;
@@ -134,6 +139,10 @@ footer a:hover {
 
     .description {
         font-size: 1.2em !important;
+    }
+
+    #logo-img {
+        width: calc(100% - 10%) !important;
     }
 }
 
@@ -150,6 +159,10 @@ footer a:hover {
     .description {
         font-size: 1.2em !important;
     }
+
+    #logo-img {
+        width: calc(100% - 40%) !important;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
@@ -161,11 +174,19 @@ footer a:hover {
     main #spp-form {
         width: calc(100% - 10%) !important;
     }
+
+    #logo-img {
+        width: calc(100% - 45%) !important;
+    }
 }
 
 @media (min-width: 993px) and (max-width: 1200px) {
 
     main #spp-form {
         width: 100% !important;
+    }
+
+    #logo-img {
+        width: calc(100% - 55%) !important;
     }
 }
